--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ nav{
 main{
   background: no-repeat center center;
   background-size: cover;
-  height: 92vh;
 }
 
 .nav-list{
@@ -62,6 +61,7 @@ main{
   transition: 0.3s;
 }
 
+/*responsividade do body e nav list*/
 @media (max-width: 999px) {
   body{
     overflow-x: hidden;
@@ -93,6 +93,7 @@ main{
   transform: translateX(0);
 }
 
+/*responsividade do mobile*/
 @keyframes navLinkFade{
   from{
     opacity: 0;
@@ -116,7 +117,7 @@ main{
   transform: rotate(45deg) translate(-5px, -7px);
 }
 
-
+/*barra de pesquisa icone de pesquisa e responsividade*/
 .search-container {
   display: flex;
   align-items: center;
@@ -173,6 +174,7 @@ main{
   }
 }
 
+/*footer e detalhes*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
 
 :root {
@@ -191,10 +193,6 @@ main{
     letter-spacing: 1px;
     font-family: 'Inter', sans-serif;
 
-}
-
-main {
-    height: 1000px;
 }
 
 footer {
@@ -318,6 +316,7 @@ footer {
     font-weight: 100;
 }
 
+/*responsividade footer*/
 @media screen and (max-width: 768px) {
     #footer_content {
         grid-template-columns: repeat(2, 1fr);
